<resources>
    <string name="app_name">易开售后</string>
    <string name="service_error">服务器出错</string>
    <string name="not_found">请求的资源不存在</string>
    <string name="timeout">请求超时</string>
    <string name="unexpected_error">未知错误</string>
    <string name="network_wrong">网络有问题</string>
    <string name="app_error">程序异常</string>
    <string name="pop_date_cancle">取消</string>
    <string name="pop_date_title">请选择时间</string>
    <string name="pop_date_commit">确定</string>
    <string name="pop_date_year">年</string>
    <string name="pop_date_month">月</string>
    <string name="pop_date_day">日</string>
    <string name="pop_date_hour">时</string>
    <string name="pop_date_minute">分</string>
    <string name="pop_date_sencond">秒</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="reLogin">账号在别处登录，请重新登录</string>
    <string name="downloading">下载中...</string>
    <string name="dialog_negative_button_text">取消</string>
    <string name="dialog_positive_button_text">确定</string>
    <string name="dialog_positive_button_text_1">确认</string>
    <string name="download_no_sdcard_dlg_title">无 SD 卡</string>
    <string name="download_no_sdcard_dlg_msg">需要有 SD 卡才能下载%s。</string>
    <string name="download_sdcard_busy_dlg_title">SD 卡不可用</string>
    <string name="download_sdcard_busy_dlg_msg">SD 卡正忙。要允许下载，请在通知中触摸“关闭 USB 存储设备”。</string>
    <string name="cannot_download">只能从“http”或“https”网址下载。</string>
    <string name="download_pending">开始下载...</string>
    <string name="required_permissions">使用%s所需权限</string>
    <string name="go_to_set">去设置</string>
    <string name="quit_app">退出</string>
    <string name="phone_information">手机信息，</string>
    <string name="storage">存储空间，</string>
    <string name="location_info">位置信息，</string>
    <string name="no_network">暂无网络，请稍后再试</string>
    <string name="request_failed">请求失败，请稍后再试</string>
    <string name="invalid_account">无效的账户</string>
    <string name="request_failed_has_error_code">请求失败，错误码：%s</string>
    <string name="request_failed_has_error_code_msg">请求失败，错误码：%1$s，错误信息：%2$s</string>
    <string name="invalidVerificationCode">无效的验证码</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="system_denied_access">系统拒绝访问</string>
    <string name="invalid_invitation_code">无效的邀请码，请重新输入</string>
    <string name="the_submitted_invitation_code_does_not_exist">提交的邀请码不存在，请重新输入</string>
    <string name="please_download_wechat">请下载微信，或更新微信至最新版本</string>
    <string name="access_to_the_server_failed">访问服务器失败</string>
    <string name="access_to_the_server_failed_again">访问服务器失败，请稍后再试</string>
    <string name="server_exception">服务器异常，请稍后再试</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="lack_of_necessary_permissions">缺少必要权限\n将导致部分功能无法正常使用</string>
    <string name="missing_storage_permissions">缺少存储权限，将不能更新</string>
    <string name="new_version_update">易开伙伴%s版本更新</string>
    <string name="download_progress">下载进度</string>
    <string name="currently_the_latest_version">当前已是最新版本</string>
    <string name="there_is_a_new_version">%1$s有新版本啦，请下载新版本以便更好的体验%2$s。</string>
    <string name="quit_exit">退出</string>
    <string name="for_your_convenience">为了使方便您的使用,需要获取以下权限信息,否则将无法使用。\n</string>
    <string name="setting_path">设置路径：设置->应用->%s->权限->%s</string>
    <string name="network_or_server_busy">网络或服务器繁忙，请稍候重试</string>
    <string name="submit_verify_info">提交实名认证信息</string>
    <string name="verify_tips">（建议提前准备好身份证）</string>
    <string name="miss_call_phone_permission">缺少电话权限，请打开电话权限！</string>
    <string name="miss_location_permission">缺少位置权限，请打开位置权限！</string>
    <string name="request_call_phone_permission">为了更好的为您服务，请打开电话权限！</string>
    <string name="request_location_permission">为了更好的为您服务，请打开位置权限！</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_10">10</string>
    <string name="number_11">11</string>
    <string name="number_12">12</string>
    <string name="number_13">13</string>
    <string name="number_14">14</string>
    <string name="number_15">15</string>
    <string name="number_16">16</string>
    <string name="number_17">17</string>
    <string name="number_18">18</string>
    <string name="number_19">19</string>
    <string name="number_20">20</string>
    <string name="paste">粘贴</string>
    <string name="data_conversion_error">数据解析失败，请重试</string>
    <string name="the_data_is_empty">返回数据为空</string>
    <string name="check_version">检查版本</string>
    <string name="default_version_number">V1.0.0</string>
    <string name="version_number">V%s</string>
    <string name="switch_account">切换账号</string>
    <string name="ok_to_log_out">确定退出登录？</string>
    <string name="determined_to_work">您确定要下班吗？</string>
    <string name="right">是的</string>
    <string name="i_know">我知道了</string>
    <string name="the_maximum_number_of_photos_has_been_reached">已达最大拍照数量</string>
    <string name="sign_in">登录</string>
    <string name="sign_in_title">账号密码登录</string>
    <string name="please_input_mobile">请输入账号</string>
    <string name="phone_number_format_is_incorrect">账号格式不正确</string>
    <string name="please_enter_your_password">请输入密码</string>
    <string name="the_password_format_is_incorrect">密码格式不正确</string>
    <string name="enter_the_employee_s_employee_number">输入本次上班人员工号</string>
    <string name="job_number_one">员工工号1</string>
    <string name="job_number_two">员工工号2</string>
    <string name="please_enter_the_employee_number">请输入员工工号</string>
    <string name="go_to_work">上班</string>
    <string name="swipe_off_work_and_log_out">滑动下班退出登录</string>
    <string name="incorrect_employee_information">员工信息有误，请查验后再试</string>
    <string name="pending_reception">待接单</string>
    <string name="pending">待完成</string>
    <string name="to_be_paid">待支付</string>
    <string name="cancelled">已取消</string>
    <string name="completed">已完成</string>
    <string name="input_sms_code">输入短信验证码</string>
    <string name="send_again_after_60">%s秒后重新发送</string>
    <string name="send_again">重新发送</string>
    <string name="input_sms_code_wrong">您输入的验证码有误，请重新输入</string>
    <string name="code_sending">发送中...</string>
    <string name="loading">加载中...</string>
    <string name="code_send_success">发送成功</string>
    <string name="code_send_failed">发送失败</string>
    <string name="sign_up_title">手机号注册</string>
    <string name="tips">提示</string>
    <string name="user_name">姓名</string>
    <string name="input_user_name">请填写姓名</string>
    <string name="id_card_number">身份证号</string>
    <string name="input_id_card_number">请填写身份证号</string>
    <string name="id_card_photo">身份证照片（身份证号清晰可见）</string>
    <string name="protrait_photo">正面照片</string>
    <string name="back_photo">背面照片</string>
    <string name="hand_held_id_card_photo">手持身份证照片</string>
    <string name="verify_user_title">实名认证</string>
    <string name="id_card_is_wrong">请填写正确的身份证号</string>
    <string name="id_card_format_is_incorrect">身份证号格式不正确</string>
    <string name="please_upload_an_id_card_page_photo">请上传身份证人脸页照片</string>
    <string name="please_upload_the_id_card_photo_page">请上传身份证国徽页照片</string>
    <string name="please_upload_a_photo_of_your_handheld_id">请上传手持身份证照片</string>
    <string name="take_id_card_image_tips">请将身份证置于虚线内，确保文字清晰</string>
    <string name="get_pic_way_take_a_photo">相机</string>
    <string name="get_pic_way_gallery">相册</string>
    <string name="crop_fail">选取失败</string>
    <string name="select_from_album">从相册选取</string>
    <string name="retake">重新拍摄</string>
    <string name="waiting_for_photo">等待拍照</string>
    <string name="retake_photo">重新拍照</string>
    <string name="upload_failed">上传失败</string>
    <string name="upload_sucessful">上传成功</string>
    <string name="default_city">芜湖市</string>
    <string name="default_city_code">10088</string>
    <string name="location_success">定位成功</string>
    <string name="location_failed">定位失败</string>
    <string name="open_location">开启位置服务，获取精准定位</string>
    <string name="to_open">去开启</string>
    <string name="please_open_location_permission">为给您提供最好的服务，请开启定位权限</string>
    <string name="sms_action">android.provider.Telephony.SMS_RECEIVED</string>
    <string name="please_open_sms_permission">为了更好的为您服务，请开启手机短信的权限</string>
    <string name="open_phone_permission">为了提供更好的服务，请设置手机信息权限</string>
    <string name="list_empty">暂无数据</string>
    <string name="request_again">重新获取</string>
    <string name="platform_price_total">¥ %s</string>
    <string name="already_in_the_end">已经到底了</string>
    <string name="appointment_service_time">预约服务时间</string>
    <string name="home_service_address">上门服务地址</string>
    <string name="rescue_service_time">救援服务时间</string>
    <string name="rescue_service_address">救援服务地址</string>
    <string name="order_number">订单编号</string>
    <string name="order_status">订单状态</string>
    <string name="order_type">订单类型</string>
    <string name="see_the_details_page_status">具体看详情页状态</string>
    <string name="order_details">订单详情</string>
    <string name="on_site_estimated_mileage">上门预估里程</string>
    <string name="on_site_service_fee">上门服务费</string>
    <string name="system_calculation">（系统计算）</string>
    <string name="order_time">下单时间</string>
    <string name="service_model">服务车型</string>
    <string name="registered_license_plate_number">登记车牌号码</string>
    <string name="contact_number">联系电话</string>
    <string name="customer_service_needs">客户服务需求</string>
    <string name="customer_supplement_picture">客户补充图片</string>
    <string name="service_picture">服务图片</string>
    <string name="look_over">查看</string>
    <string name="pack_up">收起</string>
    <string name="unable_to_serve">无法服务</string>
    <string name="orders">接单</string>
    <string name="upload_this_service_image">上传本次服务图片</string>
    <string name="please_upload_this_service_image">请上传本次服务图片</string>
    <string name="fill_in_the_reason_for_the_inability_to_serve">填写无法服务原因</string>
    <string name="within_100_words">100字以内</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="catch_to_the_door">赶往上门地点</string>
    <string name="start_service">开始服务</string>
    <string name="departure_rescue">出发救援</string>
    <string name="start_rescue">开始救援</string>
    <string name="service_completion">服务完成</string>
    <string name="need_secondary_service">需要二次服务</string>
    <string name="service_note">服务备注</string>
    <string name="total_service_charge_amount">服务收费金额合计</string>
    <string name="service_charge_details">服务收费详情</string>
    <string name="see_details">查看详情</string>
    <string name="total_working_hours">工时费合计</string>
    <string name="total_material_costs">材料费合计</string>
    <string name="how_money">%s元</string>
    <string name="how_address">%s公里</string>
    <string name="secondary_home_service_address">二次上门服务地址</string>
    <string name="gaode_map">高德地图</string>
    <string name="baidu_map">百度地图</string>
    <string name="choose_service_time">选择服务时间</string>
    <string name="manually_explain_service_time">手动输入服务时间</string>
    <string name="fill_in_the_reason_note">填写原因备注</string>
    <string name="please_select_a_secondary_service_address">请选择二次服务地址</string>
    <string name="input_content">输入内容</string>
    <string name="secondary_door_to_door_service_confirmation_with_user">已和客户沟通好二次上门事宜</string>
</resources>