<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/ll_close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_city_mask_bg_color"
            android:orientation="vertical" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_alignParentBottom="true"
            android:background="@color/base_activity_bg"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tv_bdmap"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_50"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/baidu_map"
                android:textColor="@color/text_sign_in_color"
                android:textSize="16sp" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/base_activity_bg" />

        <TextView
                android:id="@+id/tv_amap"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_50"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/gaode_map"
                android:textColor="@color/text_sign_in_color"
                android:textSize="16sp" />

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_10"
                android:background="@color/base_activity_bg" />

        <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_50"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/text_sign_in_color"
                android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>