<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:background="@color/base_activity_bg">

    <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>

    <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/text_sign_in_color"
            android:textSize="14sp"/>

    <TextView
            android:id="@+id/tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_below="@+id/tv_app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp"
            android:text="@string/sign_in_title"
            android:textColor="@color/text_sign_in_color"
            android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rl_input"
            android:layout_width="300dp"
            android:layout_height="@dimen/item_height"
            android:layout_below="@+id/tv_sign"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/txt_lab_hint"
            app:errorTextAppearance="@style/txt_lab_msg"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textCursorDrawable="@drawable/bg_curse"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/please_input_mobile"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="@color/text_sign_in_color"
                android:textColorHint="@color/edit_verify_text_hint_color"
                android:textSize="16sp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/order_payment_dev"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rl_password"
            android:layout_width="300dp"
            android:layout_height="@dimen/item_height"
            android:layout_below="@+id/rl_input"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/txt_lab_hint"
            app:errorTextAppearance="@style/txt_lab_msg"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_35"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:gravity="center"
                android:textCursorDrawable="@drawable/bg_curse"
                android:hint="@string/please_enter_your_password"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:textColor="@color/text_sign_in_color"
                android:textColorHint="@color/edit_verify_text_hint_color"
                android:textSize="16sp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/order_payment_dev"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="300dp"
            android:layout_height="@dimen/item_height"
            android:layout_below="@+id/tv_error"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/bg_sign_in_btn_selector"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/text_sign_in_btn_color"
            android:textSize="18sp"/>

    <TextView
            android:visibility="invisible"
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_below="@+id/rl_password"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:text="@string/tips"
            android:textColor="@color/bill_status_color"
            android:textSize="16sp"/>
</RelativeLayout>